--- a/index.html
+++ b/index.html
@@ -3,14 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASSINGNMENT</title>
+    <title>ASSIGNMENT - UNIT 2</title>
 </head>
-<body>
-    <a href="AU2question2.html">Newspaper </a><br>
-    <a href="AU2question3.html">Blog Website </a><br>
-    <a href="AU2question4.html">Student info </a><br>
-    <a href="AU2question5.html">form </a><br>
-    <a href="AU2question6.html">table </a><br>
-
+<body bgcolor="#f0f0f0">
+    <table width="100%" height="100%" cellspacing="0" cellpadding="0">
+        <tr>
+            <td align="center" valign="middle">
+                <table bgcolor="white" width="80%" maxwidth="600" cellspacing="0" cellpadding="20" style="border-radius: 10px;">
+                    <tr>
+                        <td align="center">
+                            <h1>ASSIGNMENT - UNIT 2</h1>
+                            <table cellspacing="10">
+                                <tr>
+                                    <td>
+                                        <a href="AU2question2.html" style="display: block; width: 100%; padding: 10px; background-color: #4CAF50; color: white; text-decoration: none; font-weight: bold; text-align: center;">NEWSPAPER</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <a href="AU2question3.html" style="display: block; width: 100%; padding: 10px; background-color: #4CAF50; color: white; text-decoration: none; font-weight: bold; text-align: center;">TRAVEL BLOG</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <a href="AU2question4.html" style="display: block; width: 100%; padding: 10px; background-color: #4CAF50; color: white; text-decoration: none; font-weight: bold; text-align: center;">STUDENT INFORMATION PORTAL</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <a href="AU2question6.html" style="display: block; width: 100%; padding: 10px; background-color: #4CAF50; color: white; text-decoration: none; font-weight: bold; text-align: center;">NESTED TABLE</a>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
